--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="right">
-          <img src="https://static.vecteezy.com/system/resources/previews/043/535/402/non_2x/laundry-machine-with-washing-clothing-and-linen-illustration-flat-cartoon-style-washer-with-baskets-of-linen-and-detergent-concept-of-domestic-housework-service-clipart-vector.jpg" class="image" alt="image" height="300px">
+          <img src="https://static.vecteezy.com/system/resources/previews/043/535/402/non_2x/laundry-machine-with-washing-clothing-and-linen-illustration-flat-cartoon-style-washer-with-baskets-of-linen-and-detergent-concept-of-domestic-housework-service-clipart-vector.jpg" class="image" alt="image" width="300px">
         </div>
       </section>
     </main>
